--- a/index.css
+++ b/index.css
@@ -26,8 +26,7 @@ body {
 }
 
 .new-todo:focus {
-  outline: none;
-  border: 3px solid pink;
+ outline: 4px solid pink;
 }
 
 .hidden {
@@ -67,21 +66,14 @@ body {
   font-size: 24px;
   font-family: inherit;
   font-weight: inherit;
-  line-height: 1.4em;
   color: inherit;
-  padding: 6px;
   border: 1px solid #999;
-  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.new-todo {
-  padding: 16px 16px 16px 40px;
+  padding: 20px 16px 20px 50px;
   border: none;
-  background: rgba(0, 0, 0, 0.003);
-  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .main {
@@ -149,8 +141,14 @@ ul li .check {
   background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.todo-list li input[type="checkbox"]:checked {
   background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+}
+
+ul li input[type="checkbox"]:checked ~ label {
+  color: #cdcdcd;;
+  text-decoration: line-through;
 }
 
 .todo-list li label {
@@ -164,15 +162,14 @@ ul li .check {
 .todo-list li .remove {
   display: none;
   position: absolute;
-  top: 0;
-  right: 10px;
-  bottom: 0;
+  top: 50%;
+  left: 95%;
   width: 40px;
   height: 40px;
-  margin: auto 0;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   font-size: 30px;
   color: #cc9a9a;
-  margin-bottom: 11px;
 }
 
 .todo-list li .remove:after {
@@ -185,14 +182,14 @@ ul li .check {
 }
 
 /*footer in section*/
-.footer {
+.footer-section {
   padding: 25px 10px;
   text-align: center;
   font-size: 15px;
   border-top: 1px solid #e6e6e6;
 }
 
-.footer:before {
+.footer-section:before {
   content: "";
   position: absolute;
   right: 0;
